# packages/nova_sdk_py_file/src/nova_sdk_py_file/models/create_job_response_503_error_code.py
@@ -1,0 +1,9 @@
+# ruff: noqa
+from enum import Enum
+
+
+class CreateJobResponse503ErrorCode(str, Enum):
+    QUEUE_UNAVAILABLE = "queue_unavailable"
+
+    def __str__(self) -> str:
+        return str(self.value)
